# tangerine-langchain-agent

./: .env.example  .gitignore  LICENSE  README.md  auth.json  models.global.toml  mypy.ini  pyproject.toml  pytest.ini  tmp.agenttest.config.toml  tmp.agenttest.real-task.toml
docs/: architecture.md  eval-experience.md  langchain-alignment.md  limitations.md  runbook.md
examples/: auth.example.json  config.local-http.toml  config.local.toml  models.global.example.toml
src/langchain_code_agent/: __init__.py  __main__.py  actions.py  agent_config.py  cli.py  config.py  model_resolution.py
src/langchain_code_agent/agent/: completion_validator.py  plan_normalization_rules.py  plan_output_normalizer.py  plan_repair.py  plan_validator.py  planner.py  planning_failures.py  replan_context.py  run_reporter.py  runner.py  step_executor.py
src/langchain_code_agent/evals/: __init__.py  experience.py  models.py  runner.py
src/langchain_code_agent/llm/: __init__.py  factory.py  local_http.py
src/langchain_code_agent/models/: plan.py  replan.py  result.py  task.py
tests/evals/: test_eval_runner.py  test_experience_archive.py
tests/integration/: test_cli_smoke.py
tests/unit/: test_actions.py  test_command_tools.py  test_completion_validator.py  test_config.py  test_edit_tools.py  test_langchain_planner.py  test_langchain_tools.py  test_llm_factory.py  test_local_http_model.py  test_plan_output_normalizer.py  test_plan_validator.py  test_replan_context.py  test_repository.py  test_run_command.py  test_run_shell.py  test_runner.py  test_search_text.py  test_write_file.py
(+32 files in other folders)
